packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/domain-record/src/main/java/sample/member/domain/DomainRecordCase.java
package sample.member.domain;

record DomainRecordCase(String name) {
}
